--- a/.htaccess
+++ b/.htaccess
@@ -7,5 +7,5 @@ RewriteEngine   on
 RewriteRule		(.*)\.css$					$1.css	[L]	
 RewriteRule		(.*)\.js$					$1.js	[L]	
 RewriteRule		(.*)\.(jpg|png|gif)$		$1.$2	[L]	
-RewriteRule		(index|delog).php			$1.php	[L]
-RewriteRule     .*							sacaliens.php	[L]
+RewriteRule		(delog).php					$1.php	[L]
+RewriteRule     .*							index.php	[L]
