--- a/.htaccess
+++ b/.htaccess
@@ -6,6 +6,7 @@
 RewriteEngine   on
 RewriteRule		(.*)\.css$					$1.css	[L]	
 RewriteRule		(.*)\.js$					$1.js	[L]	
-RewriteRule		(.*)\.(jpg|png|gif)$		$1.$2	[L]	
+RewriteRule		(.*)\.(jpg|png|gif)$			$1.$2	[L]	
+RewriteRule		(.*)\.(eot|svg|woff|ttf)$		$1.$2	[L]	
 RewriteRule		(index|delog).php			$1.php	[L]
 RewriteRule     .*							sacaliens.php	[L]
